--- a/assets/sass/fnstraj.sass
+++ b/assets/sass/fnstraj.sass
@@ -13,7 +13,7 @@
 //////////////////////////////
 body
 	background-attachment: fixed 
-	background-image: url('../images/background.jpg')
+	background-image: url('http://cdn.fnstraj.org/images/background.jpg')
 	background-size: cover
 	border-top: 7px solid #FFFFFF
 	color: #555555 
