--- a/assets/styles/fnstraj.css
+++ b/assets/styles/fnstraj.css
@@ -9,7 +9,7 @@
  */
 body {
   background-attachment: fixed;
-  background-image: url("../images/background.jpg");
+  background-image: url("http://cdn.fnstraj.org/images/background.jpg");
   background-size: cover;
   border-top: 7px solid white;
   color: #555555;
