--- a/assets/styles/fnstraj (air's conflicted copy 2013-03-03 (1)).css
+++ b/assets/styles/fnstraj (air's conflicted copy 2013-03-03 (1)).css
@@ -4,6 +4,8 @@
  * Copyright 2011-2013 Kyle Hotchkiss
  * Released under the GPL
  *
+ * http://www.colourlovers.com/palette/1598431/Unclean
+ *
  */
 body {
   color: #FFFFFF;
@@ -14,16 +16,15 @@ body {
   -webkit-text-size-adjust: none;
   text-rendering: optimizeLegibility; }
 
-a {
-  color: inherit; }
-
 h1, h2, h2, h2, h5, h6, p {
   margin: 0 0 32px 0;
   text-align: center; }
 
 p {
   line-height: 1.6em; }
-  p:last-of-type {
+  p a {
+    color: inherit; }
+  p p:last-of-type {
     margin: 0; }
 
 .wrapper {
@@ -38,34 +39,24 @@ p {
     float: left;
     width: 260px; }
 
-.header {
-  font-size: 11px;
-  font-weight: bold; }
-  .header a {
-    text-decoration: none; }
-  .header .wrapper {
-    padding: 10px 0; }
-  .header .logo {
-    float: left; }
-  .header ul {
-    float: right;
-    margin: 0; }
-    .header ul li {
-      display: inline;
-      margin-left: 15px; }
+.introduction, .queue {
+  padding-top: 120px; }
 
-.header, .introduction, .queue, .stepTwo, .stepFour {
+.introduction, .queue, .stepTwo, .stepFour {
   background-color: #1A6795; }
 
 .flight, .stepOne, .stepThree {
   background-color: #12496a; }
 
+.map
 .intensions {
   display: table;
   margin: 30px auto 0 auto; }
+  .map
   .intensions input[type=radio] {
     float: left;
     margin: 20px; }
+  .map
   .intensions label {
     display: table;
     font-size: 25px;
@@ -73,20 +64,11 @@ p {
     float: left;
     line-height: 55px;
     text-align: left; }
+    .map
     .intensions label span {
       color: #1A6795;
       font-size: 13px;
       font-weight: 600; }
-
-.flight #map {
-  height: 450px;
-  width: 800px; }
-
-.footer {
-  color: #444444;
-  font-size: 16px; }
-  .footer a {
-    color: inherit; }
 
 label {
   cursor: pointer;
@@ -128,6 +110,12 @@ input[type=submit] {
 input[type=submit]:hover {
   background-color: #12496a;
   color: #FFFFFF; }
+
+.footer {
+  color: #444444;
+  font-size: 16px; }
+  .footer a {
+    color: inherit; }
 
 .clearfix:after {
   clear: both;
