--- a/assets/styles/mobile.css
+++ b/assets/styles/mobile.css
@@ -1,1 +1,17 @@
-/*  fnstraj frontend | mobile stylesheet Copyright 2011-2013 Kyle Hotchkiss Released under the GPL  */  @media all and (max-width: 786px) 	// Tablets  @media all and (max-width: 480px) 	// iPhone Tallscreen */
+/**
+ *
+ * fnstraj frontend | mobile stylesheet
+ * Copyright 2011-2013 Kyle Hotchkiss
+ * Released under the GPL
+ *
+ */
+@media all and (max-width: 480px) {
+  .wrapper {
+    width: 480px; } }
+@media all and (max-width: 320px) {
+  .wrapper {
+    margin: 0;
+    width: 320px; }
+
+  .columns .column {
+    float: none; } }
