--- a/assets/styles/fnstraj.css
+++ b/assets/styles/fnstraj.css
@@ -44,7 +44,7 @@ p {
   .header a {
     text-decoration: none; }
   .header .wrapper {
-    padding: 10px 0; }
+    padding: 15px 0; }
   .header .logo {
     float: left; }
   .header ul {
@@ -54,10 +54,10 @@ p {
       display: inline;
       margin-left: 15px; }
 
-.header, .introduction, .queue, .stepTwo, .stepFour {
+.header, .light {
   background-color: #1A6795; }
 
-.flight, .stepOne, .stepThree {
+.dark {
   background-color: #12496a; }
 
 .intensions {
@@ -78,7 +78,7 @@ p {
       font-size: 13px;
       font-weight: 600; }
 
-.flight #map {
+#map {
   height: 450px;
   width: 800px; }
 
@@ -99,6 +99,8 @@ input[type=text],
 input[type=email],
 input[type=number] {
   border: 0;
+  border-bottom: 1px solid #FFFFFF;
+  border-right: 1px solid #FFFFFF;
   background-color: #FFFFFF;
   color: #888888;
   display: table;
@@ -136,19 +138,64 @@ input[type=submit]:hover {
   height: 1px;
   visibility: hidden; }
 
-.parsley-error-list {
+.parsley-error-list, .garlic-swap {
   display: none !important; }
 
 .parsley-error {
-  border: 1px solid #d48173 !important; }
+  border: 1px solid #FF0000 !important; }
 
-/*
+/**
  *
  * fnstraj frontend | mobile stylesheet
  * Copyright 2011-2013 Kyle Hotchkiss
  * Released under the GPL
  *
  */
+@media all and (max-width: 481 px) {
+  body {
+    font-size: 15px; }
+
+  h1, h2, h2, h2, h5, h6, p {
+    margin: 0 0 16px 0; }
+
+  .wrapper {
+    padding: 30px 10px;
+    width: 460px; }
+
+  .columns {
+    padding-top: 32px; }
+    .columns .column {
+      display: table;
+      float: none;
+      margin: 0 auto 32px auto; }
+
+  .columns:nth-of-type(2) {
+    padding-top: 0; }
+
+  .intensions {
+    margin: 16px auto 0 auto; }
+    .intensions input[type=radio] {
+      margin: 15px; }
+    .intensions label {
+      font-size: 18px;
+      line-height: 45px; }
+      .intensions label span {
+        font-size: 10px; }
+
+  input[type=text],
+  input[type=email],
+  input[type=number] {
+    width: 400px; }
+
+  .footer {
+    font-size: 10px; } }
+@media all and (max-width: 321px) {
+  .wrapper {
+    width: 300px; }
+
+  .columns .column {
+    float: none;
+    padding: 10px 0 0 0; } }
 /*
  *
  * From the Leaflet project.
